# app_789plates_server

./: Cargo.toml  README.md  note.txt  payload.json  query.sql  verificationemail.html
code/: handler.txt  middleware.txt  query.txt  static file backup.txt
sql note/: debug.sql  dev.sql  query.sql  test.sql
src/: account.rs  app_state.rs  auth.rs  auth_handlers.rs  authentication.rs  authentication0.rs  aws_operations.rs  constants.rs  hashtag.rs  jwt.rs  lib.rs  mailer.rs  main.rs  middleware.rs  middleware0.rs  object_operations.rs  pattern.rs  plates.rs  profile.rs  query.rs  query_plates.rs  rating.rs  search.rs  search_plates.rs  transfer.rs  transfer_plates.rs
