[package]
name = "app_789plates_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
axum = { version = "0.7.5", features = ["http2", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "macros",
    "postgres",
] }
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
jsonwebtoken = "9.3.0"
lettre = "0.11.6"
rand = "0.8.5"
blake3 = "1.5.1"
email_address = "0.2.4"
hyper = "1.3.0"
http-body-util = "0.1.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
